--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,8 @@
-# This file lists all contributors to the repository.
+# Authors
 
-Mark Ongaro <mark.ongaro@gmail.com>
-Nessy Mputhia <nessy.mputhia@gmail.com>
+- Mark Ongaro
+- Nessy Mputhia
+
+## Collaborators on a Peer Project
+
+These authors have collaborated on a peer project.
